# docker-swarm-visualizer-rs

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.debug.local  README.md  healthcheck.sh  visualizer-rs.stack.yml
.github/workflows/: docker.yml
src/: dns.rs  docker.rs  main.rs
src/docker/: data.rs
src/docker/data/: stats.rs
www/: index.html  tsconfig.json
www/ts/: elements.ts  get.ts  index.ts  misc.ts
