[package]
name = "docker-swarm-visualizer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", default-features = false, features = ["json"] }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1.0", default-features = false,  features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
log = { version = "0.4", default-features = false }
docker-api = { version = "0.13", default-features = false, features = ["swarm"] }
dns-lookup = "1.0.8"
sysinfo = "0.28.2"
structstruck = "0.2"